chore: Update logo loading attribute in header and footer layouts

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,9 +3,7 @@
 	<head>
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 		<script>
-			$(function () {
-				$("head").load("../layouts/head.html");
-			});
+			$('head').load('../layouts/head.html')
 		</script>
 		<title>Artsyme | About Us</title>
 	</head>
@@ -18,10 +16,9 @@
 			</div>
 			<div class="about-content">
 				<p>
-					Welcome to Artsyme, your gateway to a world of visual inspiration.
-					Have a question, feedback, or collaboration inquiry? Reach out to us!
-					We're here to assist you. Let's connect and explore the endless
-					possibilities of art together.
+					Welcome to Artsyme, your gateway to a world of visual inspiration. Have a question,
+					feedback, or collaboration inquiry? Reach out to us! We're here to assist you. Let's
+					connect and explore the endless possibilities of art together.
 				</p>
 			</div>
 		</section>
@@ -30,20 +27,13 @@
 			<section class="touch">
 				<div class="touch-box">
 					<h2>Get in Touch</h2>
-					<p>
-						We'd love to hear from you. Contact us for any inquiries or
-						feedback.
-					</p>
+					<p>We'd love to hear from you. Contact us for any inquiries or feedback.</p>
 				</div>
 
 				<div class="contact-box">
 					<div class="cnt">
 						<div class="cnt-title">
-							<img
-								loading="lazy"
-								src="../../public/icons/email.svg"
-								alt="contact email"
-							/>
+							<img src="../../public/icons/email.svg" alt="contact email" />
 							<h3>Email</h3>
 						</div>
 						<p>info@artsyme.com</p>
@@ -51,11 +41,7 @@
 
 					<div class="cnt">
 						<div class="cnt-title">
-							<img
-								loading="lazy"
-								src="../../public/icons/call.svg"
-								alt="phone number"
-							/>
+							<img src="../../public/icons/call.svg" alt="phone number" />
 							<h3>Phone</h3>
 						</div>
 						<p>+1 (555) 123-4567</p>
@@ -63,11 +49,7 @@
 
 					<div class="cnt">
 						<div class="cnt-title">
-							<img
-								loading="lazy"
-								src="../../public/icons/location.svg"
-								alt="location"
-							/>
+							<img src="../../public/icons/location.svg" alt="location" />
 							<h3>Location</h3>
 						</div>
 						<p>1234 Artsy Ave, Art City, USA</p>
