--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -3,9 +3,7 @@
 	<head>
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 		<script>
-			$(function () {
-				$("head").load("../layouts/head.html");
-			});
+			$('head').load('../layouts/head.html')
 		</script>
 		<script src="../js/explore.js" defer></script>
 		<title>Artsyme | Explore</title>
@@ -17,94 +15,54 @@
 			<section class="explore-hero">
 				<div class="title">
 					<h1>Image Collection</h1>
-					<p>
-						Discover and explore stunning visual masterpieces from around the
-						world.
-					</p>
-					<img
-						loading="lazy"
-						src="../../public/icons/discover.svg"
-						class="discover-img"
-						alt=""
-					/>
+					<p>Discover and explore stunning visual masterpieces from around the world.</p>
+					<img src="../../public/icons/discover.svg" class="discover-img" alt="" />
 				</div>
 				<div class="images-accordion">
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/wallpapers.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/wallpapers.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Wallpapers</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/nature.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/nature.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Nature</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/experimental.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/experimental.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Experimental</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/architercture.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/architercture.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Architecture</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/fashion.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/fashion.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Fashion</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/street.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/street.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Street Photography</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/food.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/food.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Food</h2>
 						</div>
 					</div>
 					<div class="tab">
-						<img
-							loading="lazy"
-							src="../../public/images/travel.jpeg"
-							alt="random image"
-						/>
+						<img loading="lazy" src="../../public/images/travel.jpeg" alt="random image" />
 						<div class="caption">
 							<h2>Travel</h2>
 						</div>
