--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,9 +3,7 @@
 	<head>
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 		<script>
-			$(function () {
-				$("head").load("../layouts/head.html");
-			});
+			$('head').load('../layouts/head.html')
 		</script>
 		<title>Artsyme | Home</title>
 	</head>
@@ -16,8 +14,8 @@
 			<div>
 				<h1>Visualize Art on Artsyme</h1>
 				<p>
-					Immerse yourself in a world of captivating visual art and explore the
-					creativity of talented artists.
+					Immerse yourself in a world of captivating visual art and explore the creativity of
+					talented artists.
 				</p>
 				<form action="submit" method="post">
 					<input type="email" name="email" placeholder="Join our community" />
@@ -30,57 +28,40 @@
 		<main class="main-wrapper content">
 			<section class="section-2">
 				<div class="section-2-content">
-					<h2>
-						Discover the world of art through Artsyme's unique online gallery.
-					</h2>
+					<h2>Discover the world of art through Artsyme's unique online gallery.</h2>
 					<p>
-						Artsyme is a web platform that connects artists and art enthusiasts,
-						providing a space to showcase and explore high-quality visual
-						content. Whether you're an artist looking to share your work or an
-						art lover searching for inspiration, Artsyme has something for
+						Artsyme is a web platform that connects artists and art enthusiasts, providing a space
+						to showcase and explore high-quality visual content. Whether you're an artist looking to
+						share your work or an art lover searching for inspiration, Artsyme has something for
 						everyone.
 					</p>
 				</div>
-				<img loading="lazy" loading="lazy" src="../../public/images/2.jpeg" />
+				<img loading="lazy" src="../../public/images/2.jpeg" />
 			</section>
 
 			<section class="section-3">
-				<h2 class="section-3-title">
-					Upload and showcase your high-quality photos on Artsyme
-				</h2>
+				<h2 class="section-3-title">Upload and showcase your high-quality photos on Artsyme</h2>
 				<div class="box-container">
 					<div class="box">
-						<img loading="lazy" src="../../public/icons/cube.svg" />
-						<h3 class="box-title">
-							Discover a world of stunning visual art on Artsyme
-						</h3>
-						<p>
-							Explore a diverse collection of artwork from talented artists.
-						</p>
+						<img src="../../public/icons/cube.svg" />
+						<h3 class="box-title">Discover a world of stunning visual art on Artsyme</h3>
+						<p>Explore a diverse collection of artwork from talented artists.</p>
 						<div class="box-links">
 							<a href="#">Learn More ></a>
 						</div>
 					</div>
 					<div class="box">
-						<img loading="lazy" src="../../public/icons/cube.svg" />
+						<img src="../../public/icons/cube.svg" />
 						<h3 class="box-title">Connect with artists and art enthusiasts</h3>
-						<p>
-							Engage with a community of creatives and art lovers from around
-							the world.
-						</p>
+						<p>Engage with a community of creatives and art lovers from around the world.</p>
 						<div class="box-links">
 							<a href="#">Sign Up ></a>
 						</div>
 					</div>
 					<div class="box">
-						<img loading="lazy" src="../../public/icons/cube.svg" />
-						<h3 class="box-title">
-							Find inspiration and expand your artistic horizons on Artsyme
-						</h3>
-						<p>
-							Discover new techniques, styles, and perspectives through our
-							curated content.
-						</p>
+						<img src="../../public/icons/cube.svg" />
+						<h3 class="box-title">Find inspiration and expand your artistic horizons on Artsyme</h3>
+						<p>Discover new techniques, styles, and perspectives through our curated content.</p>
 						<div class="box-links">
 							<a href="#">Join Now ></a>
 						</div>
@@ -89,42 +70,25 @@
 			</section>
 
 			<section class="section-4">
-				<img
-					loading="lazy"
-					src="../../public/images/3.jpeg"
-					class="important"
-				/>
+				<img loading="lazy" src="../../public/images/3.jpeg" class="important" />
 				<div class="section-4-content">
-					<h2 class="section-4-title">
-						Discover the Benefits of Using Artsyme for Visual Content
-					</h2>
+					<h2 class="section-4-title">Discover the Benefits of Using Artsyme for Visual Content</h2>
 					<p>
-						Artsyme provides a platform for content creators to showcase their
-						high-quality photos and offers viewers a curated gallery experience.
+						Artsyme provides a platform for content creators to showcase their high-quality photos
+						and offers viewers a curated gallery experience.
 					</p>
 					<div class="benefits-container">
 						<div>
-							<img
-								loading="lazy"
-								src="../../public/icons/benefits.svg"
-								class="benefits"
-							/>
+							<img src="../../public/icons/benefits.svg" class="benefits" />
 							<h3>For Creators</h3>
-							<p>
-								Gain exposure and recognition for your work in a vibrant online
-								community.
-							</p>
+							<p>Gain exposure and recognition for your work in a vibrant online community.</p>
 						</div>
 						<div>
-							<img
-								loading="lazy"
-								src="../../public/icons/benefits.svg"
-								class="benefits"
-							/>
+							<img src="../../public/icons/benefits.svg" class="benefits" />
 							<h3>For Explorers</h3>
 							<p>
-								Discover a diverse collection of stunning visual content from
-								talented artists worldwide.
+								Discover a diverse collection of stunning visual content from talented artists
+								worldwide.
 							</p>
 						</div>
 					</div>
@@ -135,8 +99,7 @@
 				<div class="faq-title-box">
 					<h2>Frequently Asked Questions</h2>
 					<p>
-						Find answers to common questions about how to use the platform and
-						community guidelines.
+						Find answers to common questions about how to use the platform and community guidelines.
 					</p>
 					<button>About Us</button>
 				</div>
@@ -146,9 +109,8 @@
 						<h3 class="accordion-header">How do I post?</h3>
 						<div class="accordion-panel">
 							<p>
-								To post your photos, simply click on the 'Post' button and
-								follow the instructions provided. Make sure your photos meet our
-								high quality standards.
+								To post your photos, simply click on the 'Post' button and follow the instructions
+								provided. Make sure your photos meet our high quality standards.
 							</p>
 						</div>
 					</div>
@@ -157,8 +119,8 @@
 						<h3 class="accordion-header">Can I sell my artwork on Artsyme?</h3>
 						<div class="accordion-panel">
 							<p>
-								Yes, Artsyme provides a marketplace feature that allows artists
-								to sell their work directly to buyers.
+								Yes, Artsyme provides a marketplace feature that allows artists to sell their work
+								directly to buyers.
 							</p>
 						</div>
 					</div>
@@ -167,47 +129,38 @@
 						<h3 class="accordion-header">Is Artsyme free to use?</h3>
 						<div class="accordion-panel">
 							<p>
-								Yes, Artsyme is free to use for both artists and viewers.
-								However, premium features are available for a fee.
+								Yes, Artsyme is free to use for both artists and viewers. However, premium features
+								are available for a fee.
 							</p>
 						</div>
 					</div>
 
 					<div class="accordion">
-						<h3 class="accordion-header">
-							How can I contact customer support?
-						</h3>
+						<h3 class="accordion-header">How can I contact customer support?</h3>
 						<div class="accordion-panel">
 							<p>
-								If you have any questions or need assistance, you can reach out
-								to our customer support team through our contact page or by
-								sending an email to support@artsyme.com.
+								If you have any questions or need assistance, you can reach out to our customer
+								support team through our contact page or by sending an email to support@artsyme.com.
 							</p>
 						</div>
 					</div>
 
 					<div class="accordion">
-						<h3 class="accordion-header">
-							What are the image requirements for uploading?
-						</h3>
+						<h3 class="accordion-header">What are the image requirements for uploading?</h3>
 						<div class="accordion-panel">
 							<p>
-								To ensure the best quality, we recommend uploading images with a
-								minimum resolution of 1920x1080 pixels and in JPEG or PNG
-								format.
+								To ensure the best quality, we recommend uploading images with a minimum resolution
+								of 1920x1080 pixels and in JPEG or PNG format.
 							</p>
 						</div>
 					</div>
 
 					<div class="accordion">
-						<h3 class="accordion-header">
-							Can I collaborate with other artists on Artsyme?
-						</h3>
+						<h3 class="accordion-header">Can I collaborate with other artists on Artsyme?</h3>
 						<div class="accordion-panel">
 							<p>
-								Yes, Artsyme provides a collaboration feature that allows
-								artists to work together on projects and share their creative
-								process.
+								Yes, Artsyme provides a collaboration feature that allows artists to work together
+								on projects and share their creative process.
 							</p>
 						</div>
 					</div>
@@ -217,15 +170,11 @@
 			<section class="section-6">
 				<h2>Stay Updated with Artsyme's Newsletter</h2>
 				<p>
-					Subscribe to our newsletter to receive the latest updates on new
-					artists, featured artwork, and upcoming events.
+					Subscribe to our newsletter to receive the latest updates on new artists, featured
+					artwork, and upcoming events.
 				</p>
 				<form>
-					<input
-						type="email"
-						name="email"
-						placeholder="Enter your email address"
-					/>
+					<input type="email" name="email" placeholder="Enter your email address" />
 					<button type="submit">Subscribe</button>
 				</form>
 			</section>
