--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<meta http-equiv='refresh' content='0; URL=https://artsyme.synokira.com/src/pages'>
+<!-- Production -->
+<meta http-equiv="refresh" content="0; URL=https://artsyme.synokira.com/src/pages" />
+
+<!-- Development -->
+<!-- <meta http-equiv="refresh" content="0; URL=http://127.0.0.1:5500/src/pages" /> -->
