modified:   src/css/explore.css 	modified:   src/css/style.css 	modified:   src/js/explore.js 	modified:   src/js/script.js 	modified:   src/pages/index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
 					Immerse yourself in a world of captivating visual art and explore the creativity of
 					talented artists.
 				</p>
-				<form action="submit" method="post">
+				<form>
 					<input type="email" name="email" placeholder="Join our community" />
 					<button href="#">Sign up</button>
 					<p>By joining, you agree to our Terms and Conditions.</p>
