chore: Update logo loading attribute in header and footer layouts

--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -81,7 +81,7 @@
 					<a href="#">...</a>
 				</nav>
 
-				<div class="imageContainer" id="editorial">
+				<div class="image-container" id="editorial">
 					<img
 						loading="lazy"
 						src="../../public/categories/editorial/ahmed-HL8ebMRzZiY-unsplash.jpeg"
@@ -185,7 +185,7 @@
 					/>
 				</div>
 
-				<div class="imageContainer" id="animals">
+				<div class="image-container" id="animals">
 					<img
 						loading="lazy"
 						src="../../public/categories/animals/anastasia-shadura-oUdIUM-SieM-unsplash.jpeg"
@@ -288,7 +288,7 @@
 					/>
 				</div>
 
-				<div class="imageContainer" id="fashion">
+				<div class="image-container" id="fashion">
 					<img
 						loading="lazy"
 						src="../../public/categories/fashion/aedrian-salazar-LjgkhxTgAEQ-unsplash.jpeg"
@@ -392,7 +392,7 @@
 					/>
 				</div>
 
-				<div class="imageContainer" id="food">
+				<div class="image-container" id="food">
 					<img
 						loading="lazy"
 						src="../../public/categories/food-drink/arty-aQql2F8fYsI-unsplash.jpeg"
@@ -496,7 +496,7 @@
 					/>
 				</div>
 
-				<div class="imageContainer" id="street">
+				<div class="image-container" id="street">
 					<img
 						loading="lazy"
 						src="../../public/categories/street-photography/alexander-london-3rDhAq51AOE-unsplash.jpeg"
@@ -600,7 +600,7 @@
 					/>
 				</div>
 
-				<div class="imageContainer" id="wallpapers">
+				<div class="image-container" id="wallpapers">
 					<img
 						loading="lazy"
 						src="../../public/categories/wallpapers/8machine-_-gCkv8mnmxm8-unsplash.jpeg"
